# ccom_sdk

./: .gitmodules  CMakeLists.txt  install.sh
ccom_core/: ccom_config.h  ccom_frame_verify.c  ccom_frame_verify.h  ccom_protocol.c  ccom_protocol.h  ccom_recv.c  ccom_recv.h  ccom_send.c  ccom_send.h
ccom_crc/: crc32.c  crc64.c
ccom_packet_imp/: deck_callbacks.c  packet_callbacks.c  packet_callbacks.h  packet_def.c  packet_def.h
cmake-modules/: ccom_sdk.cmake  compiler_config.cmake  elog_config.cmake
packet/: deck_callbacks.c  deck_callbacks.h  packet_api.c  packet_api.h  packet_callbacks.c  packet_callbacks.h  packet_def.c  packet_def.h  packet_manage.c  packet_manage.h  packet_structs.c  packet_structs.h
serial_driver/: pc_serial_config.h  serial_api.c
serial_driver/pc_serial/: pc_serial_config.h  serial.c  serial_api.c  serial_api.h
serial_driver/uw_serial/: serial_api.c  serial_api.h
sim_data_generator/: sim_telemetry.c  sim_telemetry.h
sim_data_generator/auv_deck/: auv_deck_data_generator.c
sim_data_generator/deck_auv/: deck_auv_data_generator.c
sys_tools/: sem_tool.c  sem_tool.h  sys_tool.c  sys_tool.h
test/: auv_deck_data_generator.c  recv_test.c  send_test.c  uw_device.h
